--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div class="btn_c">
         <button class="pwa_install_btn">Install</button>
     </div>
+
+    <div class="images">
+        <img src="house-640.jpg" alt="">
+        <img src="pattern-640.png" alt="">
+    </div>
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('/sw.js', { scope: '/' });
